Fix scoreboard alignment

--- a/style.css
+++ b/style.css
@@ -95,15 +95,17 @@ main {
 }
 
 #scoreboard {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 4px 1fr;
+  width: min(100vw, 45rem);
   justify-content: center;
   align-items: center;
-  gap: 6rem;
 }
 
 .player-score {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 0.5rem;
 }
 
@@ -112,6 +114,8 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  max-width: 13rem;
 }
 
 .player-name-display.hide,
@@ -141,7 +145,7 @@ main {
 .player-name-input {
   background-color: var(--color-primary);
   padding: 0.5rem 2rem;
-  max-width: 13rem;
+  width: 100%;
 }
 
 .player-name-input:focus {
